--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "encrypt": "encrypt config.js config.js.cast5",
+    "decrypt": "decrypt config.js.cast5 config.js",
+    "me_encrypt": "encrypt me_config.js me_config.js.cast5",
+    "me_decrypt": "decrypt me_config.js.cast5 me_config.js"
   },
   "dependencies": {
     "body-parser": "~1.15.1",
+    "config-leaf": "^0.3.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "jade": "~1.11.0",
+    "mongo-express": "^0.31.2",
+    "mongoose": "^4.6.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
   }
